<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/background" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/sign_margin_right"
            android:layout_weight="0.5"
            android:src="@drawable/arrow2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/payandsendtype"
            android:textColor="@color/common_white"
            android:textSize="@dimen/common_text_size" />

        <ImageView
            android:id="@+id/home_seach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginRight="@dimen/sign_margin_right"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/middle_margin_left"
        android:layout_marginRight="@dimen/middle_margin_right"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/middle_margin_top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paystype" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:button="@null"
                android:layout_margin="@dimen/middle_margin_top"
                android:background="@drawable/btn_radiobutton"
                android:textColor="@color/text_color_select_radiobutton"
                android:text="@string/payonline" />

            <RadioButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_radiobutton"
                android:layout_margin="@dimen/middle_margin_top"
                android:textColor="@color/text_color_select_radiobutton"
                android:button="@null"
                android:text="@string/payofline" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/middle_margin_left"
        android:layout_marginRight="@dimen/middle_margin_right"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sendtype" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="true"
                android:background="@drawable/btn_radiobutton"
                android:layout_margin="@dimen/middle_margin_top"
                android:textColor="@color/text_color_select_radiobutton"
                android:text="@string/takebyjd" />

            <RadioButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:background="@drawable/btn_radiobutton"
                android:layout_margin="@dimen/middle_margin_top"
                android:textColor="@color/text_color_select_radiobutton"
                android:text="@string/takebyself" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commodity_choose_takeaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/middle_margin_left"
        android:layout_marginRight="@dimen/middle_margin_right"
        android:layout_marginTop="@dimen/middle_margin_top" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/common_size3"
            android:text="@string/takebyselfaddress" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="@dimen/common_size2"
            android:text="成都总部自提点" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/middle_margin_left"
        android:layout_marginRight="@dimen/middle_margin_right"
        android:layout_marginTop="@dimen/middle_margin_top" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_size3"
            android:layout_weight="1"
            android:text="@string/takebyselftime" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="TextView" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:src="@drawable/arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/middle_margin_left"
        android:layout_marginRight="@dimen/middle_margin_right"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button"
            android:layout_margin="@dimen/middle_margin_top"
            android:textColor="@color/common_white"
            android:text="@string/sure" />
    </LinearLayout>

</LinearLayout>