<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/background" >

        <ImageView
            android:id="@+id/settingedit_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/small_margin_left"
            android:layout_weight="0.6"
            android:rotationX="180"
            android:src="@drawable/arrow2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/myselfinfo"
            android:textColor="@color/common_white"
            android:textSize="@dimen/common_text_size" />

        <RelativeLayout
            android:id="@+id/myself_sms_re"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/middle_margin_left"
            android:layout_weight="0.6" >

            

        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:layout_margin="@dimen/middle_margin_bottom"
        android:layout_marginTop="@dimen/sign_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/mycollection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/headerimg" />

            <com.ymhd.mifei.tool.CircleImageView
                android:id="@+id/myself_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/head"
                android:layout_margin="@dimen/padding3"
                android:layout_weight="4" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_weight="12"
            android:padding="@dimen/small_margin_top"
            android:src="@drawable/arrow" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="@dimen/middle_margin_bottom"
        android:layout_marginTop="@dimen/sign_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nickname" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="TextView" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="12"
            android:padding="@dimen/small_margin_top"
            android:src="@drawable/arrow" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="@dimen/middle_margin_bottom"
        android:layout_marginTop="@dimen/sign_margin_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_weight="2"
            android:text="@string/id"
             />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/setting_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="@dimen/middle_margin_bottom"
        android:layout_marginTop="@dimen/sign_margin_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="12"
            android:padding="@dimen/small_margin_top"
            android:src="@drawable/arrow" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="@dimen/middle_margin_bottom"
        android:layout_marginTop="@dimen/sign_margin_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userandsafe" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="12"
            android:padding="@dimen/small_margin_top"
            android:src="@drawable/arrow" />

    </LinearLayout>
</LinearLayout>
